--- a/src/project/vue/1.index.md
+++ b/src/project/vue/1.index.md
@@ -11,5 +11,45 @@ meta:
 # 全局模块
 
 ::: tip 前言
-
+vue 中相关api在typescript中的用法
 :::
+
+## 1.请求
+
+- `service.d.ts`
+
+```ts
+export interface IResponseData<T = any> {
+  c: number
+  m: string | null
+  d: T
+}
+
+export interface IPageData<T = any> {
+  pageSize: number
+  totalCount: number
+  currentPage: number
+  result: T[]
+}
+
+// 搜索
+export declare namespace TabListType {
+  interface RequestParams {
+    id: string
+    name?: string
+  }
+  interface ResponseData extends IResponseData<IPageData<T>> {
+    d?: number
+    m: string
+  }
+}
+```
+
+- `api.ts`
+
+```ts
+// 搜索
+export const tabListApi = (params: TabListType.RequestParams): Promise<TabListType.ResponseData> => {
+  return request.get(url, { params })
+}
+```
