--- a/src/project/vue/6.slot.md
+++ b/src/project/vue/6.slot.md
@@ -10,6 +10,10 @@ meta:
 
 # slot
 
+::: tip 前言
+vue 中相关api在typescript中的用法
+:::
+
 ## 1.slot类型定义
 
 ```ts
@@ -19,5 +23,3 @@ defineSlots<{
     leaf: (props: { row: NodeType }) => void
 }>()
 ```
-
-
