--- a/src/base/1.api/13.builtin.md
+++ b/src/base/1.api/13.builtin.md
@@ -167,16 +167,20 @@ const r = map({name:'abc',age:11},(item,key)=>{
 
 ## 6.Omit
 
-对已定义的类型中忽略某些属性
+>对已定义的类型中忽略某些属性
 
 ```ts
-let person = {
-  name:'abc',
-  age:111
-  addrsss:'ddddd'
+interface Person {
+  name:string,
+  age:number,
+  address:string
 }
+// 忽略address属性
+type Person2 = Omit<Person,'address'> // {name:string,age:number}
+// 使用Pick + Exclude 实现 Omit
+type Person2 = Pick<T,Exclude<keyof Person,K>> // {name:string,age:number}
+//  实现 Omit 
 type Omit<T,K extends keyof T> = Pick<T,Exclude<keyof T,K>>
-type OmitAddress = Omit<typeof person,'address'>
 ```
 
 忽略 person 中的 addresss 属性（先排除掉不需要的 key,再通过 key 选出需要的属性）
