--- a/src/project/vue/2.ref.md
+++ b/src/project/vue/2.ref.md
@@ -17,7 +17,5 @@ vue 中相关api在typescript中的用法
 ## 1.定义为空时不报错
 
 ```ts
- const data = ref<TsType>(
-        {} as TsType
-    )
+const data = ref<TsType>({} as TsType)
 ```
