--- a/src/project/vue/3.props.md
+++ b/src/project/vue/3.props.md
@@ -14,21 +14,28 @@ meta:
 vue 中相关api在typescript中的用法
 :::
 
-## 复杂类型
+## 1.数组类型
 
 ```ts
-{
-        type: Array as () => (number | string)[],
-        default: () => []
-    }
+defineProps({
+  item:{
+    type: Array as () => (number | string)[],
+      default: () => []
+  }
+})
+
 ```
 
+## 2.对象类型
+
 ```ts
-{
-        type: Object as () => Node,
-        require: true,
-        validator(items: Node) {
-            return JSON.stringify(items) != '{}'
-        }
-    },
+defineProps({
+  node:{
+      type: Object as () => Node,
+      require: true,
+      validator(items: Node) {
+          return JSON.stringify(items) != '{}'
+      }
+  }
+})
 ```
