--- a/src/project/vue/5.component.md
+++ b/src/project/vue/5.component.md
@@ -11,9 +11,11 @@ meta:
 # component
 
 ::: tip 前言
-vue 中相关api在typescript中的用法
+vue 中api `component` 在typescript中的用法
 :::
 
+## 1.component类型定义
+
 ```ts
-import type { App } from 'vue'
+const data = component<string>(()=> info.name)
 ```
