--- a/src/base/1.api/1.index.md
+++ b/src/base/1.api/1.index.md
@@ -11,8 +11,28 @@ meta:
 # 基础功能
 
 ::: tip 前言
-
+typescript 环境配置
 :::
+
+## 1.node 环境配置
+
+```json
+{
+  "compilerOptions": {
+    "target": "ES2020",
+    "module": "CommonJS",
+    "lib": ["ES2020"],
+    "strict": true,
+    "moduleResolution": "node",
+    "outDir": "./dist",
+    "rootDir": "./src",
+    "incremental": true,
+    "tsBuildInfoFile": "./.tsbuildinfo"
+  },
+  "include": ["src/**/*"]
+}
+
+```
 
 ## 1.环境配置
 
