--- a/src/base/1.api/13.builtin.md
+++ b/src/base/1.api/13.builtin.md
@@ -121,6 +121,39 @@ type DeepRequired<T> = {
 
 ## 3.Readonly
 
+### 3.1 案例
+
+```ts
+interface PersonType {
+  name: string;
+  age: string;
+  phone: string;
+}
+// type ReadonlyPersonType = Readonly<Person>;
+// {
+//   readonly name: string;
+//   readonly age: string;
+//   readonly phone: string;
+// }
+
+const person: PersonType = {
+    name:'xiaoming',
+    age:'14',
+    phone:'18232323232323'
+}
+
+const student:Readonly<PersonType> = {
+    name:'xiaoming',
+    age:'14',
+}
+
+const body:Readonly<PersonType> = {
+    name:'xiaoming',
+}
+```
+
+### 3.2 原理
+
 对已定义的类型中转化仅读属性
 
 ```ts
@@ -132,6 +165,50 @@ type RequiredPerson = Readonly<Person>;
 
 ## 4.Pick
 
+### 4.1 案例
+
+```ts
+interface PersonType {
+  name: string;
+  age: string;
+  phone: string;
+}
+// type PickPersonType = Pick<Person, "name" | "age">;
+// {
+//   name: string;
+//   age: string;
+// }
+
+const person: PersonType = {
+    name:'xiaoming',
+    age:'14',
+    phone:'18232323232323'
+}
+
+const student:Pick<PersonType, "name" | "age"> = {
+    name:'xiaoming',
+    age:'14',
+}
+
+const body:Pick<PersonType, "name"> = {
+    name:'xiaoming',
+}
+```
+
+- 如果只用其中一项
+
+```ts
+interface PersonType {
+  name: string;
+  age: string;
+  phone: string;
+}
+type Name = PersonType['name']
+const name :Name = 'xiaoming'
+```
+
+### 4.2 原理
+
 对已定义的类型中挑选所需的属性
 
 ```ts
@@ -142,6 +219,38 @@ type PickPerson = Pick<Person, "name" | "age">;
 在已有类型中挑选所需属性
 
 ## 5.Record
+
+### 5.1 案例
+
+```ts
+interface Type {
+  age: number;
+  phone: number;
+}
+// type RecordersonType = Record<string, number>;
+// {
+//   age: number;
+//   phone: number;
+// }
+
+const person: Type = {
+  age: 1;
+  phone: 22222;
+}
+
+const student:Record<string, number>= {
+  age: 1;
+  phone: 22222;
+}
+
+const body:Record<string, number|string> = {
+    name:'xiaoming',
+    age: 1,
+    phone: 22222,
+}
+```
+
+### 5.2 原理
 
 对已定义的类型中记录类型
 
@@ -167,6 +276,34 @@ const r = map({name:'abc',age:11},(item,key)=>{
 
 ## 6.Omit
 
+### 6.1 案例
+
+```ts
+interface PersonType {
+  name: string;
+  age: string;
+  phone: string;
+}
+// type OmitPersonType = Omit<PersonType,'phone'>;
+// {
+//   name: string;
+//   age: string;
+// }
+
+const person: PersonType = {
+    name:'xiaoming',
+    age:'14',
+    phone:'18232323232323'
+}
+
+const student:Omit<PersonType,'phone'> = {
+    name:'xiaoming',
+    age:'14',
+}
+```
+
+### 6.2 原理
+>
 >对已定义的类型中忽略某些属性
 
 ```ts
