--- a/src/base/2.config/1.config.md
+++ b/src/base/2.config/1.config.md
@@ -8,7 +8,7 @@ meta:
     content: vuepress,最新技术文档,vuepress语法,markdown语法
 ---
 
-# 一.报错
+# 一.常见问题与解决方案
 
 ::: tip 前言
 
@@ -37,3 +37,56 @@ declare module '*.vue' {
     export default componentOptions
 }
 ```
+
+## 1.模块解析失败
+
+现象：Error: Cannot find module '@/components/Button'。
+
+原因：未正确配置 baseUrl 和 paths。
+
+解决
+
+```json
+"baseUrl": ".",
+"paths": {
+  "@/*": ["./src/*"]
+}
+```
+
+## 2.JSX 语法报错
+
+现象：Parsing error: Unexpected token。
+
+原因：未配置 jsx 或 jsxFactory。
+
+解决：
+
+```json
+"jsx": "react",
+"jsxFactory": "React.createElement"
+```
+
+## 3.装饰器报错
+
+现象：Experimental support for decorators is a feature that is subject to change。
+
+原因：未启用 experimentalDecorators。
+
+解决：
+
+```json
+"experimentalDecorators": true,
+"emitDecoratorMetadata": true
+```
+
+## 4.类型检查过严
+
+现象：Variable 'x' implicitly has type 'any'。
+
+原因：noImplicitAny 启用。
+
+解决：
+
+显式声明类型：let x: number;
+
+或局部禁用：// @ts-ignore（不推荐）。
