--- a/src/base/2.config/1.index.md
+++ b/src/base/2.config/1.index.md
@@ -14,7 +14,19 @@ meta:
 
 :::
 
-## compilerOptions
+## 1.配置
+
+```json
+{
+  "files": [],
+  "references": [
+    { "path": "./tsconfig.app.json" },
+    { "path": "./tsconfig.node.json" }
+  ]
+}
+```
+
+## 2.compilerOptions
 
 ```json
 "compilerOptions": {
