--- a/src/base/2.config/13.com.md
+++ b/src/base/2.config/13.com.md
@@ -8,4 +8,19 @@ meta:
     content: vuepress,最新技术文档,vuepress语法,markdown语法
 ---
 
-# 十二
+# 十二.javascript转换
+
+- tsconfig.json
+
+```json
+{
+    "compilerOptions": {
+        "outDir": "./built", // ts
+        "allowJs": true,
+        "target": "es5"
+    },
+    "include": [
+        "./src/**/*"
+    ]
+}
+```
