--- a/src/project/vue/1.index.md
+++ b/src/project/vue/1.index.md
@@ -14,6 +14,26 @@ meta:
 vue 中相关api在typescript中的用法
 :::
 
+```json
+{
+  "compilerOptions": {
+    "target": "ES2020",
+    "module": "ESNext",
+    "lib": ["ES2020", "DOM"],
+    "strict": true,
+    "moduleResolution": "node",
+    "baseUrl": ".",
+    "paths": {
+      "@/*": ["./src/*"]
+    },
+    "jsx": "react",
+    "sourceMap": true,
+    "incremental": true
+  },
+  "include": ["src/**/*"]
+}
+```
+
 ## 1.请求
 
 - `service.d.ts`
