--- a/src/project/react/1.index.md
+++ b/src/project/react/1.index.md
@@ -9,3 +9,23 @@ meta:
 ---
 
 # 1
+
+```json
+{
+  "compilerOptions": {
+    "target": "ES2020",
+    "module": "ESNext",
+    "lib": ["ES2020", "DOM"],
+    "strict": true,
+    "moduleResolution": "node",
+    "baseUrl": ".",
+    "paths": {
+      "@/*": ["./src/*"]
+    },
+    "jsx": "react",
+    "sourceMap": true,
+    "incremental": true
+  },
+  "include": ["src/**/*"]
+}
+```
